--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<p-menubar [model]="items">
+    <ng-template pTemplate="start">
+        HH
+    </ng-template>
+    <ng-template pTemplate="end">
+        <input type="text" class="p-inputtext-sm" pInputText placeholder="Search">
+    </ng-template>
+</p-menubar>
