--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -3,20 +3,41 @@
     overflow: hidden;
     .header {
         width: 100%;
-        height: 58px;
+        height: 59px;
         border-bottom: 1px solid #ccc;
     }
     .main-content {
-        min-height: calc(100vh - 58px);
+        min-height: calc(100vh - 59px);
         .sidebar {
             min-width: 220px;
             max-width: 220px;
-            height: calc(100vh - 58px);
+            height: calc(100vh - 59px);
+            overflow: hidden;
+            transition: .8s;
+            @media screen and (max-width: 991px) {
+                min-width: 0px;
+                max-width: 0px;
+            }
         }
         .content-body {
-            height: calc(100vh - 58px);
+            height: calc(100vh - 59px);
             overflow-y: auto;
+            transition: .8s;
+            min-width: 280px;
+            background: #f7f8ff;
         }
     }
-    
+}
+
+.collapsed {
+    width: 0 !important;
+    min-width: 0 !important;
+    max-width: 0 !important;
+    @media screen and (max-width: 991px) {
+        min-width: 280px !important;
+        max-width: 280px !important;
+    }
+}
+.uncollapsed {
+    width: 100% !important;
 }
