--- a/src/app/layouts/sidebar/sidebar.component.scss
+++ b/src/app/layouts/sidebar/sidebar.component.scss
@@ -1,10 +1,11 @@
 .menu-container {
     width: 100%;
+    min-width: 220px !important;
     height: calc(100vh - 58px);
     overflow-y: auto;
     ul {
         list-style: none;
-        padding: 12px 0;
+        padding: 24px 0;
         li {
             width: 100%;
             height: 42px;
@@ -20,7 +21,7 @@
                 margin: 0 10px;
                 color: #484848;
                 line-height: 42px;
-                border-radius: 8px;
+                border-radius: 12px;
                 padding: 0 10px;
                 text-decoration: none;
                 font-size: 16px;
