--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,2 +1,107 @@
 <h5 class="card-title">Users</h5>
 
+<div>
+    <p-toolbar>
+        <div class="p-toolbar-group-left">
+            <span class="p-input-icon-right mb-2 me-2">
+                <i class="pi pi-search"></i>
+                <input type="text" class="p-inputtext-sm" (keyup)="searchUsers()" [(ngModel)]="searchText" pInputText placeholder="Search"/>
+            </span>
+
+            <p-multiSelect [options]="roles"  [displaySelectedLabel]="false" [showHeader]="false" defaultLabel="Role" [(ngModel)]="filterItems" (onChange)="filterUsers()" defaultLabel="Select a Country" optionLabel="name" class="multiselect-custom mb-2">
+                <ng-template let-value pTemplate="selectedItems">
+                    Role
+                </ng-template>
+                <ng-template let-role pTemplate="item">
+                    <div class="country-item">
+                        <div></div>
+                        <span class="status-badge-option" [style]="{'background': role.color+'22', 'color': role.color}">{{role.label}}</span>
+                    </div>
+                </ng-template>
+            </p-multiSelect>
+
+            <p-multiSelect [options]="status"  [displaySelectedLabel]="false" [showHeader]="false" defaultLabel="Role" [(ngModel)]="filterItems" (onChange)="filterUsers()" defaultLabel="Select a Country" optionLabel="name" class="multiselect-custom mb-2">
+                <ng-template let-value pTemplate="selectedItems">
+                    Status
+                </ng-template>
+                <ng-template let-role pTemplate="item">
+                    <div class="country-item">
+                        <div></div>
+                        <span class="status-badge-option" [style]="{'background': role.color+'22', 'color': role.color}">{{role.label}}</span>
+                    </div>
+                </ng-template>
+            </p-multiSelect>
+
+            <p-multiSelect [options]="publishers"  [displaySelectedLabel]="false" [showHeader]="false" defaultLabel="Role" [(ngModel)]="filterItems" (onChange)="filterUsers()" defaultLabel="Select a Country" optionLabel="name" class="multiselect-custom mb-2">
+                <ng-template let-value pTemplate="selectedItems">
+                    Publishers
+                </ng-template>
+                <ng-template let-role pTemplate="item">
+                    <div class="country-item">
+                        <div></div>
+                        <span class="status-badge-option" [style]="{'background': role.color+'22', 'color': role.color}">{{role.label}}</span>
+                    </div>
+                </ng-template>
+            </p-multiSelect>
+        </div>
+        <div class="p-toolbar-group-right">
+            <p-button icon="pi pi-plus" label="Invite User" styleClass="p-button-sm primary-btn"></p-button>
+        </div>
+    </p-toolbar>
+    <div class="chip-container d-flex my-3">
+        <div class="chip-elements">
+            <p-chip label="{{item.label}}" removeIcon="pi pi-times" (onRemove)="RemoveFilterOption(index)" *ngFor="let item of filterItems; let index = index" [removable]="true" styleClass="custom-chip mb-2 me-2"></p-chip>
+        </div>
+        <div class="clear-filter">
+            <p-button label="Clear All Filters" (click)="clearFilter()" styleClass="p-button-sm clear-btn"></p-button>
+        </div>
+    </div>
+</div>
+
+<div class="table-container p-0" style="border-radius: 12px; overflow: hidden;">
+
+    <p-table [value]="filteredUsers" [paginator]="true" styleClass="p-datatable mt-4" [rows]="10" [showCurrentPageReport]="true" [tableStyle]="{'min-width': '50rem'}"
+        currentPageReportTemplate="{first}-{last} of {totalRecords}" [ariaSelected]="true"  [rowsPerPageOptions]="[10,25,50]">
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width:30%">Name</th>
+                <th style="width:15%">Role</th>
+                <th style="width:15%">Status</th>
+                <th style="width:15%">Publisher</th>
+                <th style="width:15%">Last Log In</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-user>
+            <tr class="users-table-row pointer" (click)="selectUser(user.id)">
+                <td>
+                    <div class="user-avatar">
+                        <div class="avatar-box" [style]="{'background': user.status.color+'22'}">
+                            <img src="{{user?.avatar}}" alt="" *ngIf="user.avatar !== null">
+                            <div class="caracters-box caracters-box-sm" *ngIf="user.avatar === null"><strong>{{dataService.extractFirstCharacters(user?.fullname)}}</strong></div>
+                        </div>
+                        <div class="name-box">
+                            <p class="m-0"><strong>{{user.fullname}}</strong></p>
+                            <small class="label-sm">{{user.email}}</small>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <p class="m-0 label" *ngFor="let role of user.roles">
+                        {{role}}
+                    </p>
+                </td>
+                <td>
+                    <span class="status-badge" [style]="{'background': user.status.color+'22', 'color': user.status.color}">{{user.status.label}}</span><!-- [class]="'customer-badge status-' + user.status.value" -->
+                </td>
+                <td>
+                    <span class="label" *ngIf="user.Publisher === null">-</span>
+                    <span class="label" *ngIf="user.Publisher !== null">
+                        {{user.Publisher.name}}
+                    </span>
+                </td>
+                <td><span class="label">{{user.lastLogin | date: 'dd.MM.YYYY, HH:mm'}}</span></td>
+            </tr>
+        </ng-template>
+    </p-table>
+
+</div>
