--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&display=swap');
 
 @import url(assets/css/bootstrap.css);
 @import url(theme/bootstrap-component.scss);
+@import url(theme/utils.scss);
 
 * {
     font-family: 'Roboto', sans-serif;
