--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -15,6 +15,12 @@
         }
     }
 
+    .search-input {
+        margin-left: 120px;
+    }
+    .collapse-btn {
+        margin-bottom: 9px;
+    }
     .p-multiselect {
         border: none !important;
         box-shadow: none !important;
