--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -17,6 +17,7 @@
 
     .search-input {
         margin-left: 120px;
+        box-shadow: none !important;
     }
     .collapse-btn {
         margin-bottom: 9px;
