--- a/src/app/pages/users/user-item/user-item.component.scss
+++ b/src/app/pages/users/user-item/user-item.component.scss
@@ -63,8 +63,8 @@
         }
         .p-highlight {
             .p-tabview-nav-link {
-                color: orangered !important;
-                border-color: orangered !important;
+                color: #d9625a !important;
+                border-color: #d9625a !important;
                 
             }
         }
