--- a/src/theme/utils.scss
+++ b/src/theme/utils.scss
@@ -33,8 +33,9 @@
 }
 
 .primary-btn {
-    background: orangered !important;
+    background: #d9625a !important;
     color: #ffffff !important;
-    border-color: orangered !important;
+    border-color: #d9625a !important;
     padding: 8px 12px !important;
+    box-shadow: none !important;
 }
