--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -7,6 +7,9 @@
         .p-toolbar-group-left {
             display: flex;
             flex-wrap: wrap;
+            .p-inputtext-sm {
+                box-shadow: none ;
+            }
         }
     }
 
@@ -43,7 +46,7 @@
 
     .p-multiselect {
         border: none;
-        margin-right: 12px;
+        margin-right: 1px;
         font-size: 14px;
         box-shadow: none !important;
         .p-icon-wrapper {
@@ -83,8 +86,8 @@
                 background: #fff !important;
                 .p-checkbox {
                     .p-highlight {
-                        background: orangered;
-                        border-color: orangered;
+                        background: #d9625a;
+                        border-color: #d9625a;
                     }
                 }
             }
@@ -155,6 +158,7 @@
             min-width: 32px !important;
             height: 32px !important;
             padding: 0 !important;
+            box-shadow: none !important;
         }
         .p-paginator-current {
             margin-right: auto !important;
@@ -170,14 +174,14 @@
             height: 32px !important;
 
             .p-dropdown-label {
-                color: orangered;
+                color: #d9625a;
                 line-height: 28px;
                 padding: 0;
                 font-weight: 500;
             }
             .p-dropdown-trigger {
                 width: 22px;
-                color: orangered;
+                color: #d9625a;
             }
         }
     
@@ -205,7 +209,7 @@
             .p-highlight {
                 display: block !important;
                 text-align: center;
-                background: orangered !important;
+                background: #d9625a !important;
                 color: #fff !important;
                 border-radius: 5px !important;
             }
