--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -115,15 +115,7 @@
         padding: 12px !important;
         overflow: hidden !important;
         background: transparent !important;
-        border: 1px solid #ccc !important;
-
-        tr:first-child {
-            border-radius: 12px 12px 0 0 !important;
-            overflow: hidden;
-            td:first-child {
-                border-radius: 12px 0 0 0;
-            }
-        }
+        border: 1px solid #e7e8ee;
     }
     .users-table-row {
         font-size: 13px;
@@ -153,6 +145,8 @@
     }
 
     .p-paginator {
+        background: transparent !important;
+        border-width: 0 !important;
         button {
             width: 32px !important;
             min-width: 32px !important;
@@ -172,12 +166,14 @@
             font-size: 13px !important;
             font-weight: 400;
             height: 32px !important;
+            background-color: transparent;
 
             .p-dropdown-label {
                 color: #d9625a;
                 line-height: 28px;
                 padding: 0;
                 font-weight: 500;
+                
             }
             .p-dropdown-trigger {
                 width: 22px;
